<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="show_empty_days"
        android:summary="@string/pref_schedule_show_empty_sum"
        android:title="@string/pref_schedule_show_empty_title" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="merge_same_blocks"
        android:summary="@string/pref_schedule_merge_sum"
        android:title="@string/pref_schedule_merge_title" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="show_breaks"
        android:summary="@string/pref_schedule_show_breaks_sum"
        android:title="@string/pref_schedule_show_breaks_title" />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="show_breaks"
        android:key="highlight_breaks"
        android:summary="@string/pref_schedule_highlight_breaks_sum"
        android:title="@string/pref_schedule_highlight_breaks_title" />

</PreferenceScreen>
