<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_go_offline"
        android:orderInCategory="99"
        android:title="@string/action_go_offline"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_go_online"
        android:orderInCategory="99"
        android:title="@string/action_go_online"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <!-- Schedule today -->
    <item
        android:id="@+id/action_schedule_today"
        android:icon="@drawable/ic_today_white_24dp"
        android:title="@string/go_to_today"
        app:showAsAction="ifRoom"/>
</menu>
