<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="s.pahlplatz.fhict_companion.views.activities.SettingsActivity$SchedulePreferenceFragment"
        android:icon="@drawable/ic_schedule_black_24dp"
        android:title="@string/pref_header_schedule" />

    <header
        android:fragment="s.pahlplatz.fhict_companion.views.activities.SettingsActivity$GradesPreferenceFragment"
        android:icon="@drawable/ic_school_black_24dp"
        android:title="@string/pref_header_grades" />

    <header
        android:fragment="s.pahlplatz.fhict_companion.views.activities.SettingsActivity$AccountPreferenceFragment"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/pref_header_account" />

    <header
        android:fragment="s.pahlplatz.fhict_companion.views.activities.SettingsActivity$NetworkPreferenceFragment"
        android:icon="@drawable/ic_signal_wifi_3_bar_black_24dp"
        android:title="@string/pref_header_network" />

</preference-headers>
