<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="s.pahlplatz.fhict_companion.views.activities.AddBlockActivity"
    tools:showIn="@layout/activity_add_block"
    android:padding="16dp">

    <Spinner
        android:id="@+id/add_block_day"
        android:layout_width="305dp"
        android:layout_height="28dp"
        tools:layout_editor_absoluteY="5dp"
        tools:layout_editor_absoluteX="63dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/add_block_subject" />

    <EditText
        android:id="@+id/add_block_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/add_block_day"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/subject" />

    <EditText
        android:id="@+id/add_block_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/add_block_subject"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/teacher" />

    <EditText
        android:id="@+id/add_block_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/add_block_teacher"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/room" />

    <EditText
        android:id="@+id/add_block_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="time"
        android:textIsSelectable="true"
        android:layout_below="@+id/add_block_room"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/add_block_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/add_block_start"
        android:textIsSelectable="true"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="time" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/add_block_day"
        android:layout_alignParentStart="true"
        android:text="@string/day" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add_block_teacher"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:text="@string/subject" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add_block_room"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:text="@string/teacher" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add_block_start"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:text="@string/room" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add_block_end"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:text="@string/starting_time" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/add_block_end"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:text="@string/ending_time" />

    <Button
        android:id="@+id/add_block_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/save" />

</RelativeLayout>
