<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                    xmlns:tools="http://schemas.android.com/tools"
                                    android:id="@+id/block_card_view"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:clickable="true"
                                    android:foreground="?selectableItemBackground"

                                    card_view:cardCornerRadius="3dp"
                                    card_view:cardElevation="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/block_card_times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="6dp"
            android:text="@string/time_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"/>

        <TextView
            android:id="@+id/block_card_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="6dp"
            android:text="@string/course_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat"/>

        <TextView
            android:id="@+id/block_card_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="16dp"
            android:text="@string/room_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat"
            tools:ignore="RelativeOverlap"/>

        <TextView
            android:id="@+id/block_card_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:padding="6dp"
            android:text="@string/teacher_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>